# Redes_neuronales

./: .env  .gitignore  README.md  dashboard_state.json  launch_cognitive.py  pyproject.toml
dashboard/: README.md  app_dashboard.py  dashboard_benchmark.py  dashboard_curriculum.py  dashboard_hub.py  dashboard_live_stream.py  dashboard_pyg_interactive.py  dashboard_pyg_viz.py  dashboard_pyg_with_reasoner.py  dashboard_reasoner_panel.py
docs/: deployment_roadmap.md  fase20_meta_loop.md  fase31b_reasoning_layer.md  fase32_reasoner_integration.md  fase33_curriculum_learning.md  fase34_benchmark_suite.md  fase35_agentic_reasoners.md  proyecto.md
examples/: agentic_demo.py  benchmark_demo.py  benchmark_scientific.py  cognitive_agent_demo.py  cognitive_attention_demo.py  cognitive_evolution_demo.py  cognitive_graph_demo.py  cognitive_monitor_demo.py  cognitive_reasoning_demo.py  cognitive_reasoning_evolution_demo.py  cognitive_society_demo.py  compare_optimizers.py  curriculum_learning_demo.py  global_training_demo.py  hybrid_graph_autoalign_demo.py  hybrid_graph_demo.py  latent_planner_demo.py  macro_reasoning_demo.py  memory_replay_demo.py  meta_learning_demo.py  pretrain_with_z.py  pyg_bridge_demo.py  train_autograd_xor.py  train_rl_curriculum.py  train_xor.py  trm_act_demo.py  trm_cognitive_graph_demo.py  trm_demo.py
scripts/: debug_fase5.py  fase5_funcional.py  organize_project.py  run_tests.py
src/: __init__.py  app.py
tests/: test_benchmark.py  test_cognitive_graph.py  test_cognitive_graph_hybrid.py  test_curriculum.py  test_distribution.py  test_fase5.py  test_fase5_final.py  test_federation.py  test_gradients.py  test_graph_trainer.py  test_imports.py  test_latent_integration.py  test_latent_planner.py  test_meta_rules.py  test_network.py  test_neuron.py  test_pyg_bridge.py  test_reasoning.py  test_society.py  (+3 more)
(+123 files in other folders)
